<resources>
    <string name="app_name">Lets Read</string>
    <string name="action_home">Home</string>
    <string name="book_title">Book Name</string>
    <string name="author">Author</string>
    <string name="genre">Genre</string>
    <string name="year_released">Year Released</string>
    <string name="summary">Why would you recommend this book?</string>
    <string name="add_image">Add Image</string>
    <string name="view_image">View Image</string>
    <string name="btn_post">Post</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
